--- a/index.html
+++ b/index.html
@@ -304,19 +304,7 @@
             Tell us who you are and what you coach. We’ll email you when StadiumAmp is ready for your sport,
             and occasionally share roadmap updates—no spam.
           </p>
-          <form class="space-y-3" action="#" method="post">
-            <div>
-              <label for="name" class="block text-xs font-medium text-slate-300 mb-1">
-                Name <span class="text-slate-500">(optional)</span>
-              </label>
-              <input
-                id="name"
-                name="name"
-                type="text"
-                class="w-full rounded-xl border border-slate-700 bg-slate-950 px-3 py-2 text-sm text-slate-50 placeholder-slate-500 focus:outline-none focus:ring-2 focus:ring-emerald-400/80 focus:border-emerald-400/80"
-                placeholder="Coach Taylor"
-              />
-            </div>
+            <iframe src="https://docs.google.com/forms/d/e/1FAIpQLSdL5TeeIxRtOeSN0wJstHeTwNZRuH0Zlw0jcKoSfoaahi0J1Q/viewform?embedded=true" width="640" height="430" frameborder="0" marginheight="0" marginwidth="0">Loading…</iframe>            </div>
             <div>
               <label for="email" class="block text-xs font-medium text-slate-300 mb-1">
                 Email
