--- a/index.html
+++ b/index.html
@@ -251,7 +251,7 @@
 
         <div class="mt-8">
           <a
-            href="https://stadiumapp.app"
+            href="https://stadiumamp.app"
             class="inline-flex items-center rounded-full bg-emerald-400 px-6 py-2.5 text-sm md:text-base font-semibold text-slate-950 hover:bg-emerald-300 transition"
           >
             Launch StadiumAmp App
