--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
           </p>
           <div class="flex flex-wrap gap-3 mb-4">
             <a
-              href="https://stadiumapp.app"
+              href="https://stadiumamp.app"
               class="inline-flex items-center justify-center rounded-full bg-emerald-400 px-6 py-2.5 text-sm md:text-base font-semibold text-slate-950 hover:bg-emerald-300 transition"
             >
               Launch StadiumAmp App
