--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
         <a href="#pricing" class="hover:text-emerald-300">Pricing</a>
         <a href="#faq" class="hover:text-emerald-300">FAQ</a>
         <a
-          href="https://stadiumamp.app"
+          href="https://www.stadiumamp.app"
           class="inline-flex items-center rounded-full border border-emerald-400/70 bg-emerald-400/10 px-4 py-1.5 text-sm font-semibold text-emerald-200 hover:bg-emerald-400 hover:text-slate-950 transition"
         >
           Launch App
@@ -52,7 +52,7 @@
           </p>
           <div class="flex flex-wrap gap-3 mb-4">
             <a
-              href="https://stadiumamp.app"
+              href="https://www.stadiumamp.app"
               class="inline-flex items-center justify-center rounded-full bg-emerald-400 px-6 py-2.5 text-sm md:text-base font-semibold text-slate-950 hover:bg-emerald-300 transition"
             >
               Launch StadiumAmp App
