--- a/index.html
+++ b/index.html
@@ -412,7 +412,7 @@
     <div class="mx-auto max-w-6xl px-4 flex flex-col md:flex-row items-center justify-between gap-4 text-xs text-slate-500">
       <p>© <span id="year"></span> StadiumAmp. All rights reserved.</p>
       <div class="flex items-center gap-4">
-        <a href="https://stadiumamp.app" class="hover:text-emerald-300">Launch App</a>
+        <a href="https://www.stadiumamp.app" class="hover:text-emerald-300">Launch App</a>
         <!-- Add contact, privacy, etc. when ready -->
       </div>
     </div>
