--- a/index.html
+++ b/index.html
@@ -11,13 +11,14 @@
   <script src="https://cdn.tailwindcss.com"></script>
 </head>
 <body class="bg-slate-950 text-slate-50">
-  <header class="border-b border-slate-800 bg-slate-950/80 backdrop-blur">
-    <div class="mx-auto max-w-6xl px-4 py-4 flex items-center justify-between">
-      <div class="flex items-center gap-2">
-        <!-- Placeholder logo circle – replace with your SVG/logo -->
-        <div class="h-8 w-8 rounded-full bg-emerald-400/80"></div>
-        <span class="text-xl font-semibold tracking-tight">StadiumAmp</span>
-      </div>
+<div class="flex items-center gap-2">
+  <img
+    src="StadiumAmpLogoRev1.png"
+    alt="StadiumAmp logo"
+    class="h-8 w-auto"
+  />
+  <span class="text-xl font-semibold tracking-tight">StadiumAmp</span>
+</div>
       <nav class="hidden md:flex items-center gap-6 text-sm text-slate-300">
         <a href="#features" class="hover:text-emerald-300">Features</a>
         <a href="#how-it-works" class="hover:text-emerald-300">How It Works</a>
