--- a/index.html
+++ b/index.html
@@ -11,28 +11,34 @@
   <script src="https://cdn.tailwindcss.com"></script>
 </head>
 <body class="bg-slate-950 text-slate-50">
-<div class="flex items-center gap-2">
-  <img
-    src="StadiumAmpLogoRev1.png"
-    alt="StadiumAmp logo"
-    class="h-8 w-auto"
-  />
-</div>
-      <nav class="hidden md:flex items-center gap-6 text-sm text-slate-300">
-        <a href="#features" class="hover:text-emerald-300">Features</a>
-        <a href="#how-it-works" class="hover:text-emerald-300">How It Works</a>
-        <a href="#sports" class="hover:text-emerald-300">Sports</a>
-        <a href="#pricing" class="hover:text-emerald-300">Pricing</a>
-        <a href="#faq" class="hover:text-emerald-300">FAQ</a>
-        <a
-          href="https://www.stadiumamp.app"
-          class="inline-flex items-center rounded-full border border-emerald-400/70 bg-emerald-400/10 px-4 py-1.5 text-sm font-semibold text-emerald-200 hover:bg-emerald-400 hover:text-slate-950 transition"
-        >
-          Launch App
-        </a>
-      </nav>
-    </div>
-  </header>
+<header class="border-b border-slate-800 bg-slate-950/80 backdrop-blur">
+  <div class="mx-auto max-w-6xl px-4 py-4 flex items-center justify-between">
+    <!-- Logo -->
+    <a href="#top" class="flex items-center gap-2 shrink-0">
+      <img
+        src="StadiumAmpLogoRev1.png"
+        alt="StadiumAmp logo"
+        class="h-8 w-auto block"
+      />
+    </a>
+
+    <!-- Desktop nav -->
+    <nav class="hidden md:flex items-center gap-6 text-sm text-slate-300">
+      <a href="#features" class="hover:text-emerald-300">Features</a>
+      <a href="#how-it-works" class="hover:text-emerald-300">How It Works</a>
+      <a href="#sports" class="hover:text-emerald-300">Sports</a>
+      <a href="#pricing" class="hover:text-emerald-300">Pricing</a>
+      <a href="#faq" class="hover:text-emerald-300">FAQ</a>
+      <a
+        href="https://stadiumapp.app"
+        class="inline-flex items-center rounded-full border border-emerald-400/70 bg-emerald-400/10 px-4 py-1.5 text-sm font-semibold text-emerald-200 hover:bg-emerald-400 hover:text-slate-950 transition"
+      >
+        Launch App
+      </a>
+    </nav>
+  </div>
+</header>
+
 
   <main>
     <!-- Hero -->
