--- a/index.html
+++ b/index.html
@@ -18,7 +18,8 @@
       <img
         src="StadiumAmpLogoRev2.png"
         alt="StadiumAmp logo"
-        class="h-8 w-auto block"
+        class="max-h-12 w-auto block"
+        style="max-width: 180px;"
       />
     </a>
 
