--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
         </div>
 
         <div class="relative">
-          <div class="absolute -inset-4 bg-emerald-500/10 blur-3xl rounded-3xl"></div>
+          <div class="absolute -inset-4 bg-[rgba(22,162,73,0.10)] blur-3xl rounded-3xl"></div>
           <div class="relative rounded-3xl border border-slate-800 bg-slate-900/80 p-4 shadow-xl">
             <!-- Fake app preview card -->
             <div class="flex items-center justify-between mb-4">
