--- a/index.html
+++ b/index.html
@@ -8,19 +8,6 @@
     name="description"
     content="StadiumAmp is a game-day audio engine starting with youth baseball and softball — walk-up songs, inning-break music, and victory anthems organized by roster and ready to fire with a single tap. More sports coming soon."
   />
-
-  <!-- Tailwind config + CDN -->
-  <script>
-    tailwind.config = {
-      theme: {
-        extend: {
-          colors: {
-            stadiumGreen: '#16a249'
-          }
-        }
-      }
-    }
-  </script>
   <script src="https://cdn.tailwindcss.com"></script>
 </head>
 <body class="bg-slate-950 text-slate-50" id="top">
@@ -39,14 +26,14 @@
 
       <!-- Desktop nav -->
       <nav class="hidden md:flex items-center gap-6 text-sm text-slate-300">
-        <a href="#features" class="hover:text-stadiumGreen">Features</a>
-        <a href="#how-it-works" class="hover:text-stadiumGreen">How It Works</a>
-        <a href="#sports" class="hover:text-stadiumGreen">Sports</a>
-        <a href="#pricing" class="hover:text-stadiumGreen">Pricing</a>
-        <a href="#faq" class="hover:text-stadiumGreen">FAQ</a>
+        <a href="#features" class="hover:text-[#16a249]">Features</a>
+        <a href="#how-it-works" class="hover:text-[#16a249]">How It Works</a>
+        <a href="#sports" class="hover:text-[#16a249]">Sports</a>
+        <a href="#pricing" class="hover:text-[#16a249]">Pricing</a>
+        <a href="#faq" class="hover:text-[#16a249]">FAQ</a>
         <a
           href="https://www.stadiumamp.app"
-          class="inline-flex items-center rounded-full border border-[rgba(22,162,73,0.7)] bg-[rgba(22,162,73,0.10)] px-4 py-1.5 text-sm font-semibold text-stadiumGreen hover:bg-stadiumGreen hover:text-slate-950 transition"
+          class="inline-flex items-center rounded-full border border-[rgba(22,162,73,0.7)] bg-[rgba(22,162,73,0.10)] px-4 py-1.5 text-sm font-semibold text-[#16a249] hover:bg-[#16a249] hover:text-slate-950 transition"
         >
           Launch App
         </a>
@@ -60,26 +47,26 @@
       <div class="mx-auto max-w-6xl px-4 py-16 md:py-24 grid md:grid-cols-2 gap-10 items-center">
         <div>
           <h1 class="text-4xl md:text-5xl font-semibold tracking-tight mb-4">
-            Turn game days into <span class="text-stadiumGreen">big-league moments.</span>
+            Turn game days into <span class="text-[#16a249]">big-league moments.</span>
           </h1>
           <p class="text-slate-300 text-base md:text-lg mb-4">
             StadiumAmp is a game-day audio engine starting with youth baseball and softball.
             Walk-up songs, inning-break music, and victory anthems—organized by roster and ready
             to fire with a single tap.
           </p>
-          <p class="text-sm text-stadiumGreen mb-6">
+          <p class="text-sm text-[#16a249] mb-6">
             Built for multi-sport game days. Baseball &amp; softball first. More sports coming soon.
           </p>
           <div class="flex flex-wrap gap-3 mb-4">
             <a
               href="https://www.stadiumamp.app"
-              class="inline-flex items-center justify-center rounded-full bg-stadiumGreen px-6 py-2.5 text-sm md:text-base font-semibold text-slate-950 hover:bg-stadiumGreen transition"
+              class="inline-flex items-center justify-center rounded-full bg-[#16a249] px-6 py-2.5 text-sm md:text-base font-semibold text-slate-950 hover:bg-[#16a249] transition"
             >
               Launch StadiumAmp App
             </a>
             <a
               href="#sports"
-              class="inline-flex items-center justify-center rounded-full border border-slate-600 px-6 py-2.5 text-sm md:text-base font-semibold text-slate-100 hover:border-stadiumGreen hover:text-stadiumGreen transition"
+              class="inline-flex items-center justify-center rounded-full border border-slate-600 px-6 py-2.5 text-sm md:text-base font-semibold text-slate-100 hover:border-[#16a249] hover:text-[#16a249] transition"
             >
               Get notified for your sport
             </a>
@@ -99,25 +86,25 @@
             <!-- Fake app preview card -->
             <div class="flex items-center justify-between mb-4">
               <div>
-                <p class="text-xs uppercase tracking-[0.18em] text-stadiumGreen">Game Mode</p>
+                <p class="text-xs uppercase tracking-[0.18em] text-[#16a249]">Game Mode</p>
                 <p class="text-sm text-slate-300">Bronx Bombers @ 5:30 PM</p>
               </div>
-              <span class="rounded-full bg-[rgba(22,162,73,0.15)] px-3 py-1 text-xs font-medium text-stadiumGreen">
+              <span class="rounded-full bg-[rgba(22,162,73,0.15)] px-3 py-1 text-xs font-medium text-[#16a249]">
                 Pre-game checklist
               </span>
             </div>
             <div class="space-y-2 text-xs text-slate-200">
               <div class="flex items-center justify-between rounded-xl border border-slate-800 bg-slate-900 px-3 py-2">
                 <span>Roster &amp; batting order set</span>
-                <span class="text-stadiumGreen text-xs font-semibold">Ready</span>
+                <span class="text-[#16a249] text-xs font-semibold">Ready</span>
               </div>
               <div class="flex items-center justify-between rounded-xl border border-slate-800 bg-slate-900 px-3 py-2">
                 <span>Walk-up songs assigned</span>
-                <span class="text-stadiumGreen text-xs font-semibold">Ready</span>
+                <span class="text-[#16a249] text-xs font-semibold">Ready</span>
               </div>
               <div class="flex items-center justify-between rounded-xl border border-slate-800 bg-slate-900 px-3 py-2">
                 <span>Inning-break music scheduled</span>
-                <span class="text-stadiumGreen text-xs font-semibold">Ready</span>
+                <span class="text-[#16a249] text-xs font-semibold">Ready</span>
               </div>
               <div class="flex items-center justify-between rounded-xl border border-slate-800 bg-slate-900 px-3 py-2">
                 <span>Device &amp; speakers tested</span>
@@ -126,7 +113,7 @@
             </div>
             <div class="mt-4 flex justify-end">
               <button
-                class="inline-flex items-center rounded-full bg-stadiumGreen px-4 py-1.5 text-xs font-semibold text-slate-950 hover:bg-stadiumGreen transition"
+                class="inline-flex items-center rounded-full bg-[#16a249] px-4 py-1.5 text-xs font-semibold text-slate-950 hover:bg-[#16a249] transition"
               >
                 Start Game
               </button>
@@ -209,7 +196,7 @@
           <div class="rounded-2xl border border-slate-800 bg-slate-900 p-5 space-y-2">
             <h3 class="text-base font-semibold">
               Victory songs
-              <span class="ml-1 rounded-full bg-[rgba(22,162,73,0.15)] px-2 py-0.5 text-[0.65rem] font-semibold text-stadiumGreen align-middle">Pro</span>
+              <span class="ml-1 rounded-full bg-[rgba(22,162,73,0.15)] px-2 py-0.5 text-[0.65rem] font-semibold text-[#16a249] align-middle">Pro</span>
             </h3>
             <p class="text-sm text-slate-300">
               Celebrate wins with team-specific victory tracks that trigger right at game end.
@@ -272,7 +259,7 @@
         <div class="mt-8">
           <a
             href="https://www.stadiumamp.app"
-            class="inline-flex items-center rounded-full bg-stadiumGreen px-6 py-2.5 text-sm md:text-base font-semibold text-slate-950 hover:bg-stadiumGreen transition"
+            class="inline-flex items-center rounded-full bg-[#16a249] px-6 py-2.5 text-sm md:text-base font-semibold text-slate-950 hover:bg-[#16a249] transition"
           >
             Launch StadiumAmp App
           </a>
@@ -294,7 +281,7 @@
           </p>
           <div class="grid sm:grid-cols-2 gap-4 text-sm">
             <div class="rounded-2xl border border-slate-800 bg-slate-900 p-4">
-              <p class="text-xs font-semibold text-stadiumGreen mb-1">Available now</p>
+              <p class="text-xs font-semibold text-[#16a249] mb-1">Available now</p>
               <ul class="space-y-1 text-slate-200">
                 <li>⚾ Baseball</li>
                 <li>🥎 Softball</li>
@@ -317,15 +304,8 @@
           </p>
         </div>
 
-        <!-- Google Form embed -->
+        <!-- Google Form embed card (no heading/description) -->
         <div class="rounded-2xl border border-slate-800 bg-slate-900 p-5">
-          <h3 class="text-lg font-semibold mb-2 text-slate-100">
-            Get notified when your sport drops.
-          </h3>
-          <p class="text-sm text-slate-300 mb-4">
-            Tell us who you are and what you coach. We’ll email you when StadiumAmp is ready for your sport
-            and occasionally share roadmap updates—no spam.
-          </p>
           <div class="rounded-xl border border-slate-800 bg-slate-950 p-2">
             <iframe
               src="https://docs.google.com/forms/d/e/1FAIpQLSdL5TeeIxRtOeSN0wJstHeTwNZRuH0Zlw0jcKoSfoaahi0J1Q/viewform?embedded=true"
@@ -369,7 +349,7 @@
           </div>
 
           <div class="rounded-2xl border border-[rgba(22,162,73,0.9)] bg-slate-900 p-5 flex flex-col relative">
-            <span class="absolute -top-3 right-4 rounded-full bg-stadiumGreen px-3 py-0.5 text-[0.65rem] font-semibold text-slate-950">
+            <span class="absolute -top-3 right-4 rounded-full bg-[#16a249] px-3 py-0.5 text-[0.65rem] font-semibold text-slate-950">
               Most popular
             </span>
             <h3 class="text-base font-semibold mb-1">Pro</h3>
@@ -453,7 +433,7 @@
     <div class="mx-auto max-w-6xl px-4 flex flex-col md:flex-row items-center justify-between gap-4 text-xs text-slate-500">
       <p>© <span id="year"></span> StadiumAmp. All rights reserved.</p>
       <div class="flex items-center gap-4">
-        <a href="https://www.stadiumamp.app" class="hover:text-stadiumGreen">Launch App</a>
+        <a href="https://www.stadiumamp.app" class="hover:text-[#16a249]">Launch App</a>
         <!-- Add contact, privacy, etc. when ready -->
       </div>
     </div>
