--- a/index.html
+++ b/index.html
@@ -2,14 +2,46 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
-  <title>StadiumAmp – Game-Day Audio for Baseball, Softball, and Beyond</title>
+  <title>StadiumAmp – Walk-Up Music App for Youth Baseball & Softball</title>
   <meta name="viewport" content="width=device-width, initial-scale=1" />
+
+  <!-- Primary SEO meta -->
   <meta
     name="description"
-    content="StadiumAmp is a game-day audio engine starting with youth baseball and softball — walk-up songs, inning-break music, and victory anthems organized by roster and ready to fire with a single tap. More sports coming soon."
+    content="StadiumAmp is a walk-up music and game-day audio app for youth baseball and softball. Assign walk-up songs, schedule inning-break music, and fire victory anthems with a single tap from your phone."
   />
+  <meta
+    name="keywords"
+    content="walk up music app, walk-up songs, youth baseball walk up music, softball walk up music, game day audio app, lineup based walkup songs"
+  />
+  <meta name="robots" content="index,follow" />
+  <link rel="canonical" href="https://www.stadiumamp.com/" />
+
+  <!-- Open Graph / Facebook -->
+  <meta property="og:type" content="website" />
+  <meta property="og:url" content="https://www.stadiumamp.com/" />
+  <meta
+    property="og:title"
+    content="StadiumAmp – Walk-Up Music App for Youth Baseball & Softball"
+  />
+  <meta
+    property="og:description"
+    content="Turn every at-bat into a big-league moment with roster-based walk-up songs, inning-break music, and victory anthems."
+  />
+  <meta property="og:image" content="https://www.stadiumamp.com/social-card.png" />
+
+  <!-- Twitter Card -->
+  <meta name="twitter:card" content="summary_large_image" />
+  <meta name="twitter:title" content="StadiumAmp – Walk-Up Music App for Youth Baseball & Softball" />
+  <meta
+    name="twitter:description"
+    content="Run walk-up music and game-day audio for your youth baseball or softball team from one simple app."
+  />
+  <meta name="twitter:image" content="https://www.stadiumamp.com/social-card.png" />
+
   <script src="https://cdn.tailwindcss.com"></script>
 </head>
+
 <body class="bg-slate-950 text-slate-50" id="top">
   <!-- Header -->
   <header class="border-b border-slate-800 bg-slate-950/80 backdrop-blur">
